# Markets-profiling

./: .gitignore  README.md  pyproject.toml
modules/: crypto_data_fetcher.py
src/: 03_support_resistance_strategy.ipynb  03_support_resistance_with_fractal.ipynb  04_support_resistance_with_windowing.ipynb  05_Graph_from_asset_correlation.ipynb  06_Horizontal_visbility_graph.ipynb
src/modules/: data_fetcher.py  detect_support_resistance.py
