[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["BaptisteZloch <bzloch@hotmail.fr>"]
readme = "README.md"
packages = [{include = "src"},]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
